Fixed bug with features/signup section not having enough height on mobile and exxtra large desktop screen formats.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -335,7 +335,6 @@ a:hover {
   /* background: linear-gradient(to top, #dc2430, #7b4397); */
   background: linear-gradient(to top, #ff6c00, gold);
   min-height: 70%;
-  height: 100%;
 }
 
 .features .container {
